name:                gcode
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            Produce G-code, used to control CNC equipment
category:            Data, CNC
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
build-type:          Simple
cabal-version:       >=1.6
description:
    Targets the flavor of G-code supported by EMC2:
    <http://linuxcnc.org/docs/html/gcode_main.html>
    .
    Work in progress.

extra-source-files:
    README

library
  exposed-modules:
      Data.GCode.Raw
    , Data.GCode.Semantic
    , Data.GCode.Axes
  ghc-options:      -Wall
  build-depends:
      base   >= 3 && < 5
    , pretty >= 1.0

  other-extensions:
      DeriveDataTypeable
    , GeneralizedNewtypeDeriving

source-repository head
    type:     git
    location: git://github.com/kmcallister/gcode
